--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.13",
     "vue": "^3.2.45",
+    "vue-router": "4",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.7",
+    "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
