--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.13",
+    "@vue-hero-icons/solid": "^1.7.2",
     "vue": "^3.2.45",
     "vue-router": "4",
     "vuex": "^4.0.2"
